--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "meal-app",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=22.16.x"
+  },
+  "packageManager": "pnpm@10.11.0",
   "scripts": {
     "dev": "vite --port 3000",
     "start": "vite --port 3000",
@@ -29,6 +33,5 @@
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4"
-  },
-  "packageManager": "pnpm@8.15.6+sha512.77b89e9be77a2b06ad8f403a19cae5e22976f61023f98ad323d5c30194958ebc02ee0a6ae5d13ee454f6134e4e8caf29a05f0b1a0e1d2b17bca6b6a1f1159f86"
+  }
 }
