--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ node_modules
 dist
 dist-ssr
 *.local
+
+yarn-error.log*
+.pnpm-debug.log*
+
+# TS
+*.tsbuildinfo
+
+# Turbo
+.turbo
+
+# VSCode
+.vscode/settings.json
+
+stats.*
+
+# Test
+coverage/
