--- a/package.json
+++ b/package.json
@@ -11,7 +11,19 @@
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
-    "test": "vitest run"
+    "turbo": "pnpm dlx turbo@2.5.0",
+    "type:check": "tsc",
+    "test": "vitest run",
+    "test:ui": "vitest --ui --coverage",
+    "test:coverage": "vitest --coverage run",
+    "biome:check": "biome check",
+    "biome:fix": "pnpm biome:check --write",
+    "biome:ci": "biome ci",
+    "check:turbo": "pnpm turbo biome:check type:check test",
+    "release": "cross-env HUSKY=0 commit-and-tag-version",
+    "up-interactive": "pnpm up -i",
+    "up-latest": "pnpm up-interactive -L",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -23,16 +35,21 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.0.0-beta.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "commit-and-tag-version": "^12.5.1",
+    "cross-env": "^7.0.3",
+    "husky": "^9.1.7",
     "jsdom": "^26.0.0",
+    "lint-staged": "^16.1.0",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.5",
+    "vitest": "^3.2.0",
     "web-vitals": "^4.2.4"
   }
 }
