--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noUncheckedSideEffectImports": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-    }
+      "@/*": ["./src/*"]
+    },
+    "incremental": true
   }
 }
