--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jsdom": "^26.0.0",
     "lint-staged": "^16.1.0",
     "typescript": "^5.7.2",
-    "vite": "^6.1.0",
+    "vite": "npm:rolldown-vite@latest",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.0",
     "web-vitals": "^4.2.4"
