--- a/package.json
+++ b/package.json
@@ -26,26 +26,34 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@intentui/icons": "^1.11.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
     "react": "^19.0.0",
+    "react-aria-components": "^1.9.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "tailwindcss-react-aria-components": "^2.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.6",
+    "@fontsource-variable/geologica": "^5.2.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "clsx": "^2.1.1",
     "commit-and-tag-version": "^12.5.1",
     "cross-env": "^7.0.3",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "lint-staged": "^16.1.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwind-variants": "^1.0.0",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5.7.2",
     "vite": "npm:rolldown-vite@latest",
     "vite-tsconfig-paths": "^5.1.4",
