--- a/package.json
+++ b/package.json
@@ -28,18 +28,22 @@
   "dependencies": {
     "@intentui/icons": "^1.11.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.80.2",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "ky": "^1.8.1",
     "react": "^19.0.0",
     "react-aria-components": "^1.9.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6",
-    "tailwindcss-react-aria-components": "^2.0.0"
+    "tailwindcss-react-aria-components": "^2.0.0",
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.6",
     "@fontsource-variable/geologica": "^5.2.5",
+    "@julr/vite-plugin-validate-env": "^2.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
