--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tw-animate-css": "^1.3.3",
     "typescript": "^5.7.2",
     "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-checker": "^0.9.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.0",
     "web-vitals": "^4.2.4"
