--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
     "ky": "^1.8.1",
+    "motion": "^12.16.0",
     "react": "^19.0.0",
+    "react-aria": "^3.40.0",
     "react-aria-components": "^1.9.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6",
