feat: handle search

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@intentui/icons": "^1.11.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-pacer": "^0.8.0",
     "@tanstack/react-query": "^5.80.2",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
