--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "@tanstack/zod-adapter": "^1.120.15",
     "ky": "^1.8.1",
     "motion": "^12.16.0",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-aria": "^3.40.0",
     "react-aria-components": "^1.9.0",
     "react-dom": "^19.0.0",
+    "react-lite-youtube-embed": "^2.5.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-react-aria-components": "^2.0.0",
     "zod": "^3.25.49"
