--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview",
+    "generate-pwa-assets": "pwa-assets-generator",
     "turbo": "pnpm dlx turbo@2.5.0",
     "type:check": "tsc",
     "test": "vitest run",
@@ -54,6 +55,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@vite-pwa/assets-generator": "^1.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "clsx": "^2.1.1",
     "commit-and-tag-version": "^12.5.1",
@@ -67,6 +69,7 @@
     "typescript": "^5.7.2",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-checker": "^0.9.3",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.0",
     "web-vitals": "^4.2.4"
