--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "node": ">=22.16.x"
   },
   "packageManager": "pnpm@10.11.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "esbuild",
+      "sharp"
+    ]
+  },
   "scripts": {
     "dev": "vite --port 3000",
     "start": "vite --port 3000",
@@ -36,7 +43,7 @@
     "@tanstack/router-plugin": "^1.120.15",
     "@tanstack/zod-adapter": "^1.120.15",
     "ky": "^1.8.1",
-    "motion": "^12.16.0",
+    "motion": "12.16.0",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-aria": "^3.40.0",
@@ -67,7 +74,7 @@
     "tailwind-variants": "^1.0.0",
     "tw-animate-css": "^1.3.3",
     "typescript": "^5.7.2",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "6.3.5",
     "vite-plugin-checker": "^0.9.3",
     "vite-plugin-pwa": "^1.0.0",
     "vite-tsconfig-paths": "^5.1.4",
