chore: adjust biome includes

--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,7 @@
     "includes": [
       "src/**/*",
       "!src/*.gen.ts",
-      "!turbo",
+      "!.turbo/**/*",
       "!src/components/ui/**/*"
     ]
   },
