--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
     "type:check": {
       "inputs": ["tsconfig.json", "src/**"],
       "outputs": ["*.tsbuildinfo"],
-      "env": ["VITE_API_BASE_URL", "VITE_API_KEY"]
+      "env": ["VITE_API_BASE_URL", "VITE_API_KEY", "VITE_UMAMI_SCRIPT_URL", "VITE_UMAMI_WEBSITE_ID"]
     },
     "biome:check": {
       "outputs": [],
