--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
     "build": {
       "dependsOn": ["type:check"],
       "outputs": ["dist/**", "public/**"],
-      "env": ["VITE_API_BASE_URL", "VITE_API_KEY"]
+      "env": ["VITE_API_BASE_URL", "VITE_API_KEY", "VITE_UMAMI_SCRIPT_URL", "VITE_UMAMI_WEBSITE_ID"]
     },
 		"test": {
       "outputs": ["node_modules/.vite/**/results.json"],
