--- a/turbo.json
+++ b/turbo.json
@@ -3,8 +3,7 @@
   "tasks": {
     "type:check": {
       "inputs": ["tsconfig.json", "src/**"],
-      "outputs": ["*.tsbuildinfo"],
-      "env": ["VITE_API_BASE_URL", "VITE_API_KEY", "VITE_UMAMI_SCRIPT_URL", "VITE_UMAMI_WEBSITE_ID"]
+      "outputs": ["*.tsbuildinfo"]
     },
     "biome:check": {
       "outputs": [],
