--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.6",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
     "@fontsource-variable/geologica": "^5.2.6",
     "@julr/vite-plugin-validate-env": "^2.1.0",
     "@testing-library/dom": "^10.4.0",
