--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-pacer": "^0.8.0",
     "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-router": "^1.120.20",
     "@tanstack/react-router-devtools": "^1.120.20",
     "@tanstack/router-plugin": "^1.120.20",
