--- a/package.json
+++ b/package.json
@@ -35,28 +35,28 @@
   },
   "dependencies": {
     "@intentui/icons": "^1.11.0",
-    "@tailwindcss/vite": "^4.0.6",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-pacer": "^0.8.0",
-    "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
-    "@tanstack/react-router": "^1.120.20",
-    "@tanstack/react-router-devtools": "^1.120.20",
-    "@tanstack/router-plugin": "^1.120.20",
-    "@tanstack/zod-adapter": "^1.120.20",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "@tanstack/react-router": "^1.124.0",
+    "@tanstack/react-router-devtools": "^1.124.0",
+    "@tanstack/router-plugin": "^1.124.0",
+    "@tanstack/zod-adapter": "^1.124.0",
     "ky": "^1.8.1",
-    "motion": "12.16.0",
+    "motion": "12.22.0",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
-    "react-aria": "^3.41.0",
-    "react-aria-components": "^1.10.0",
+    "react-aria": "^3.41.1",
+    "react-aria-components": "^1.10.1",
     "react-dom": "^19.0.0",
     "react-lite-youtube-embed": "^2.5.1",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-react-aria-components": "^2.0.0",
-    "zod": "^3.25.56"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.0-beta.6",
+    "@biomejs/biome": "2.0.6",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/types": "^19.8.1",
@@ -64,25 +64,25 @@
     "@julr/vite-plugin-validate-env": "^2.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vite-pwa/assets-generator": "^1.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.6.0",
     "clsx": "^2.1.1",
     "commit-and-tag-version": "^12.5.1",
     "cross-env": "^7.0.3",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
-    "lint-staged": "^16.1.0",
-    "tailwind-merge": "^3.3.0",
+    "lint-staged": "^16.1.2",
+    "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.7.2",
-    "vite": "6.3.5",
+    "vite": "7.0.0",
     "vite-plugin-checker": "^0.9.3",
-    "vite-plugin-pwa": "^1.0.0",
+    "vite-plugin-pwa": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.2",
-    "web-vitals": "^5.0.2"
+    "vitest": "^3.2.4",
+    "web-vitals": "^5.0.3"
   }
 }
