--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "tailwind-variants": "^1.0.0",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.7.2",
-    "vite": "7.0.0",
+    "vite": "npm:rolldown-vite@7.0.4",
     "vite-plugin-checker": "^0.9.3",
     "vite-plugin-pwa": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.4",
